[gd_scene load_steps=21 format=3 uid="uid://dli126qdy01ey"]

[ext_resource type="Script" path="res://src/actors/player.gd" id="1_awono"]
[ext_resource type="Texture2D" uid="uid://cn3y2ngyen2kv" path="res://assets/dropshadow.png" id="2_32stv"]
[ext_resource type="Texture2D" uid="uid://ceawdf3tro0me" path="res://assets/player.png" id="2_cou4e"]
[ext_resource type="PackedScene" uid="uid://devsngfnkumin" path="res://src/ui/hud.tscn" id="3_cdex1"]
[ext_resource type="Texture2D" uid="uid://cjupuxkpsnvw3" path="res://assets/pistol.png" id="3_t4sy6"]
[ext_resource type="PackedScene" uid="uid://d3s6y2xg13wjs" path="res://src/ui/equip_menu.tscn" id="4_agvi2"]
[ext_resource type="Script" path="res://src/actors/hurtbox.gd" id="5_umqfp"]
[ext_resource type="Script" path="res://src/actors/pause_handler.gd" id="6_2faxl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xibsx"]
size = Vector2(12, 6)

[sub_resource type="Animation" id="Animation_o7jpr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GunSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_oliu2"]
resource_name = "idle"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GunSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_tdq8o"]
resource_name = "idle_back"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GunSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_p6y1q"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GunSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_vjn54"]
resource_name = "run_back"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GunSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o7nu3"]
_data = {
"RESET": SubResource("Animation_o7jpr"),
"idle": SubResource("Animation_oliu2"),
"idle_back": SubResource("Animation_tdq8o"),
"run": SubResource("Animation_p6y1q"),
"run_back": SubResource("Animation_vjn54")
}

[sub_resource type="Animation" id="Animation_tdtqc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [34]
}

[sub_resource type="Animation" id="Animation_tq66x"]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 34]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h4ul7"]
_data = {
"RESET": SubResource("Animation_tdtqc"),
"hurt": SubResource("Animation_tq66x")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljf7f"]
size = Vector2(31, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_up82c"]
size = Vector2(12, 6)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 34
collision_mask = 5
motion_mode = 1
script = ExtResource("1_awono")
starting_modifications = Array[String](["PennyBullet", "DimeBullet", "QuarterDisk"])
max_health = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_xibsx")

[node name="Shadow" type="Sprite2D" parent="."]
texture = ExtResource("2_32stv")

[node name="Sprite2D" type="Sprite2D" parent="." groups=["player"]]
texture = ExtResource("2_cou4e")
hframes = 8
frame = 1

[node name="GunSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_t4sy6")
hframes = 8
frame = 1

[node name="PennyCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DimeCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="QuarterCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("3_cdex1")]
process_mode = 3
visible = false

[node name="EquipMenu" parent="UI" instance=ExtResource("4_agvi2")]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.3, 2.3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "run"
libraries = {
"": SubResource("AnimationLibrary_o7nu3")
}

[node name="EffectsAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h4ul7")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="InteractableArea" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, 5)
collision_layer = 0
collision_mask = 64
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_ljf7f")

[node name="InteractTimer" type="Timer" parent="InteractableArea"]
wait_time = 0.1
one_shot = true

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, 5)
collision_layer = 2
collision_mask = 0
script = ExtResource("5_umqfp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_up82c")

[node name="PauseHandler" type="Node" parent="."]
process_mode = 3
script = ExtResource("6_2faxl")

[connection signal="body_entered" from="InteractableArea" to="." method="_on_interactable_area_body_entered"]
[connection signal="timeout" from="InteractableArea/InteractTimer" to="." method="_on_interact_timer_timeout"]
